@@ -1,3 +1,7 @@
+2010-03-23 Riccardo Mottola <rmottola@users.sf.net>
+
+	* Source/NSObject.m: Atomic increment and decrement functions for mips
+	
 2010-03-19 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* config/config.reuseaddr.c:
